<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.x22fe.smokescreen.MainActivity">

    <LinearLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_cyclic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/loading_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_resources"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/app_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smokescreen_dashboard"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/rx"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/readBuffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lt_read_buffer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bluetoothStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lt_bluetooth_status" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/toggle_smokescreen"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="gone" />

        <Switch
            android:id="@+id/switch_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/toggle_bluetooth"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/button_paired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_paired_devices"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_new_devices" />

        <ListView
            android:id="@+id/list_devices_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />

    </LinearLayout>

</RelativeLayout>